Fixed submit button cropped on iPhone

--- a/styles/home.css
+++ b/styles/home.css
@@ -145,6 +145,7 @@ main {
                 background-color: #333333;
                 transition: all 0.3s ease;
                 box-shadow: 0 4px 8px 2px rgba(0, 0, 0, 0.2);
+                width: 100%;
             }
 
                 input::placeholder {
